--- a/src/index.html
+++ b/src/index.html
@@ -192,7 +192,7 @@ section {
     });
 
     const sendData = async () => {
-        await fetch('http://localhost:3001/send-email', {
+        await fetch('https://portfolio-j4h8.onrender.com/send-email', {
             method: 'POST',
             headers: { 'Content-Type': 'application/json' },
             body: JSON.stringify(getData())
